Updated resume and formatted all files

--- a/first-html/PythonErrors.html
+++ b/first-html/PythonErrors.html
@@ -1,33 +1,58 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <!--Yau Ho Fung-->
-  <!--Suzanne Swarns-->
-  <!--CS 140-040-->
-  <!--27 September 2018-->
-  <title>Python Errors by Yau Ho Fung</title>
-  <style>
-    h1 {text-align:center; border:1px solid #33FF33; padding:15px;}
-    img {display:block; margin-left:auto; margin-right:auto; width:500px;}
-    h6 {text-align:center;}
-    body {background-color:#000000; color:#33FF33; margin:50px;}
-  </style>
+	<!--Yau Ho Fung-->
+	<!--Suzanne Swarns-->
+	<!--CS 140-040-->
+	<!--27 September 2018-->
+	<title>Python Errors by Yau Ho Fung</title>
+	<style>
+		h1 {
+			text-align: center;
+			border: 1px solid #33FF33;
+			padding: 15px;
+		}
+
+		img {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 500px;
+		}
+
+		h6 {
+			text-align: center;
+		}
+
+		body {
+			background-color: #000000;
+			color: #33FF33;
+			margin: 50px;
+		}
+	</style>
 </head>
+
 <body>
-  <h1>Python Errors</h1>
-  <img src="https://image.ibb.co/gvBmSU/ERROR.png" alt="Python SyntaxError">
-  <h6>The image above depicts the error received when attempting to run <i>print "Hello world!"</i> in Python.</h6>
-  <h3>By Yau Ho Fung<br>Sept. 27, 2018</h3>
-  <p>Python is a relatively popular programming language within the field of Computer Science. However, its popularity does not exempt it from displaying errors when dealing with poorly written codes. Like most other programming languages, there are many different types of errors in Python. Each error usually offers programmers insight on why a certain part of their code is not running correctly.</p>
-  <h4>Common Python Errors</h4>
-  <ul>
-    <li style="color:#FF0000;">NameError</li>
-    <li style="color:#FF6600;">OverflowError</li>
-    <li style="color:#FFFF00;">RuntimeError</li>
-    <li style="color:#00FF00;">SyntaxError</li>
-    <li style="color:#0000FF;">IndentationError</li>
-    <li style="color:#6600FF;">ZeroDivisionError</li>
-  </ul>
-  <p>Click <a href="https://www.programiz.com/python-programming/exceptions" target="_blank">here</a> for a full list of Python errors.</p>
+	<h1>Python Errors</h1>
+	<img src="https://image.ibb.co/gvBmSU/ERROR.png" alt="Python SyntaxError">
+	<h6>The image above depicts the error received when attempting to run <i>print "Hello world!"</i> in Python.</h6>
+	<h3>By Yau Ho Fung<br>Sept. 27, 2018</h3>
+	<p>Python is a relatively popular programming language within the field of Computer Science. However, its popularity
+		does not exempt it from displaying errors when dealing with poorly written codes. Like most other programming
+		languages, there are many different types of errors in Python. Each error usually offers programmers insight on why
+		a certain part of their code is not running correctly.</p>
+	<h4>Common Python Errors</h4>
+	<ul>
+		<li style="color:#FF0000;">NameError</li>
+		<li style="color:#FF6600;">OverflowError</li>
+		<li style="color:#FFFF00;">RuntimeError</li>
+		<li style="color:#00FF00;">SyntaxError</li>
+		<li style="color:#0000FF;">IndentationError</li>
+		<li style="color:#6600FF;">ZeroDivisionError</li>
+	</ul>
+	<p>Click <a href="https://www.programiz.com/python-programming/exceptions" target="_blank">here</a> for a full list of
+		Python errors.</p>
 </body>
+
 </html>
