--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Yau Ho Fung</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-			<ul>
-				<li><a href="/">Home</a></li>
-				<li><a href="/about/RESUME.html">About Me</a></li>
-				<li><a href="/first-html/PythonErrors.html">My First HTML Page</a></li>
-			</ul>
-		</nav>
-		<div class="container">
-			<div class="blurb">
-				<h1>Greetings, I am Yau Ho Fung!</h1>
-				<p>Welcome to my GitHub Pages.</p>
-			</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-			<ul>
-				<li><a href="mailto:yauho.fung@student.mec.cuny.edu">Email</a></li>
-				<li><a href="https://github.com/yauhofung">GitHub</a></li>
-			</ul>
-		</footer>
-	</body>
+
+<head>
+	<title>Yau Ho Fung</title>
+	<link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+
+<body>
+	<nav>
+		<ul>
+			<li><a href="/">Home</a></li>
+			<li><a href="/about/FungResume.html">About Me</a></li>
+			<li><a href="/first-html/PythonErrors.html">My First HTML Page</a></li>
+		</ul>
+	</nav>
+	<div class="container">
+		<div class="blurb">
+			<h1>Greetings, I am Yau Ho Fung!</h1>
+			<p>Welcome to my GitHub Pages.</p>
+		</div><!-- /.blurb -->
+	</div><!-- /.container -->
+	<footer>
+		<ul>
+			<li><a href="mailto:yauho.fung@student.mec.cuny.edu">Email</a></li>
+			<li><a href="https://github.com/yauhofung">GitHub</a></li>
+		</ul>
+	</footer>
+</body>
+
 </html>
