--- a/about/FungResume.html
+++ b/about/FungResume.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -159,7 +160,7 @@
 			padding: 0
 		}
 
-		.c15 {
+		.c27 {
 			border-right-style: solid;
 			padding: 7.2pt 7.2pt 7.2pt 7.2pt;
 			border-bottom-color: #ffffff;
@@ -177,7 +178,7 @@
 			border-bottom-style: solid
 		}
 
-		.c13 {
+		.c5 {
 			border-right-style: solid;
 			padding: 7.2pt 7.2pt 7.2pt 7.2pt;
 			border-bottom-color: #ffffff;
@@ -195,18 +196,17 @@
 			border-bottom-style: solid
 		}
 
-		.c27 {
-			margin-left: 0pt;
-			padding-top: 16pt;
-			list-style-position: inside;
-			text-indent: 45pt;
-			padding-bottom: 0pt;
-			line-height: 1.3;
-			text-align: left;
-			margin-right: 15pt
+		.c8 {
+			color: #000000;
+			font-weight: 700;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 9pt;
+			font-family: "Open Sans";
+			font-style: normal
 		}
 
-		.c3 {
+		.c2 {
 			color: #2079c7;
 			font-weight: 700;
 			text-decoration: none;
@@ -216,29 +216,8 @@
 			font-style: normal
 		}
 
-		.c19 {
+		.c16 {
 			color: #666666;
-			font-weight: 400;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Merriweather";
-			font-style: normal
-		}
-
-		.c7 {
-			color: #000000;
-			font-weight: 400;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 12pt;
-			font-family: "Merriweather";
-			font-style: italic
-		}
-
-		.c14 {
-			color: #666666;
-			font-weight: 400;
 			text-decoration: none;
 			vertical-align: baseline;
 			font-size: 8pt;
@@ -248,27 +227,6 @@
 
 		.c12 {
 			color: #666666;
-			font-weight: 400;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 8pt;
-			font-family: "Open Sans";
-			font-style: normal
-		}
-
-		.c2 {
-			color: #b7b7b7;
-			font-weight: 700;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Open Sans";
-			font-style: normal
-		}
-
-		.c5 {
-			color: #666666;
-			font-weight: 400;
 			text-decoration: none;
 			vertical-align: baseline;
 			font-size: 1pt;
@@ -276,34 +234,7 @@
 			font-style: normal
 		}
 
-		.c21 {
-			color: #000000;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 36pt;
-			font-family: "Merriweather";
-			font-style: normal
-		}
-
-		.c20 {
-			padding-top: 16pt;
-			padding-bottom: 0pt;
-			line-height: 1.0;
-			page-break-after: avoid;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c25 {
-			color: #000000;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Open Sans";
-			font-style: normal
-		}
-
-		.c18 {
+		.c15 {
 			padding-top: 5pt;
 			padding-bottom: 5pt;
 			line-height: 1.0;
@@ -312,33 +243,52 @@
 			margin-right: 15pt
 		}
 
-		.c1 {
-			-webkit-text-decoration-skip: none;
-			color: #1155cc;
-			font-weight: 700;
-			text-decoration: underline;
-			text-decoration-skip-ink: none;
-			font-family: "Open Sans"
+		.c18 {
+			color: #000000;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 36pt;
+			font-family: "Merriweather";
+			font-style: normal
 		}
 
-		.c0 {
-			padding-top: 6pt;
+		.c9 {
+			padding-top: 16pt;
 			padding-bottom: 0pt;
 			line-height: 1.0;
-			text-align: left;
-			margin-right: 15pt;
-			height: 9pt
-		}
-
-		.c4 {
-			padding-top: 30pt;
-			padding-bottom: 0pt;
-			line-height: 1.0;
+			page-break-after: avoid;
 			text-align: left;
 			margin-right: 15pt
 		}
 
-		.c9 {
+		.c11 {
+			color: #666666;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 9pt;
+			font-family: "Merriweather";
+			font-style: normal
+		}
+
+		.c23 {
+			color: #666666;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 8pt;
+			font-family: "Open Sans";
+			font-style: normal
+		}
+
+		.c22 {
+			color: #b7b7b7;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 9pt;
+			font-family: "Open Sans";
+			font-style: normal
+		}
+
+		.c17 {
 			color: #000000;
 			text-decoration: none;
 			vertical-align: baseline;
@@ -347,30 +297,6 @@
 		}
 
 		.c29 {
-			padding-top: 0pt;
-			padding-bottom: 0pt;
-			line-height: 1.15;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c33 {
-			padding-top: 16pt;
-			padding-bottom: 0pt;
-			line-height: 1.3;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c17 {
-			padding-top: 6pt;
-			padding-bottom: 0pt;
-			line-height: 1.3;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c32 {
 			color: #2079c7;
 			text-decoration: none;
 			vertical-align: baseline;
@@ -378,7 +304,47 @@
 			font-family: "Open Sans"
 		}
 
-		.c26 {
+		.c1 {
+			padding-top: 6pt;
+			padding-bottom: 0pt;
+			line-height: 1.3;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c14 {
+			padding-top: 30pt;
+			padding-bottom: 0pt;
+			line-height: 1.0;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c10 {
+			color: #000000;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 12pt;
+			font-family: "Merriweather"
+		}
+
+		.c19 {
+			padding-top: 16pt;
+			padding-bottom: 0pt;
+			line-height: 1.3;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c25 {
+			padding-top: 6pt;
+			padding-bottom: 0pt;
+			line-height: 1.0;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c32 {
 			padding-top: 0pt;
 			padding-bottom: 6pt;
 			line-height: 1.0;
@@ -386,63 +352,72 @@
 			margin-right: 15pt
 		}
 
-		.c23 {
+		.c30 {
+			color: #000000;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 9pt;
+			font-family: "Open Sans"
+		}
+
+		.c7 {
+			padding-top: 0pt;
+			padding-bottom: 0pt;
+			line-height: 1.15;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c20 {
+			border-spacing: 0;
+			border-collapse: collapse;
+			margin-right: auto
+		}
+
+		.c24 {
 			text-decoration-skip-ink: none;
 			-webkit-text-decoration-skip: none;
 			color: #1155cc;
 			text-decoration: underline
 		}
 
-		.c6 {
-			border-spacing: 0;
-			border-collapse: collapse;
-			margin-right: auto
-		}
-
-		.c28 {
-			margin-left: 0pt;
-			list-style-position: inside;
-			text-indent: 45pt
-		}
-
-		.c24 {
+		.c3 {
 			background-color: #ffffff;
 			max-width: 525.6pt;
 			padding: 28.8pt 43.2pt 43.2pt 43.2pt
 		}
 
-		.c30 {
-			padding: 0;
-			margin: 0
-		}
-
-		.c8 {
-			font-weight: 400;
-			font-style: italic
-		}
-
-		.c16 {
+		.c6 {
 			color: inherit;
 			text-decoration: inherit
 		}
 
-		.c31 {
-			font-style: normal
+		.c0 {
+			font-weight: 400;
+			font-style: italic
 		}
 
-		.c10 {
+		.c31 {
+			font-family: "Open Sans"
+		}
+
+		.c26 {
 			height: 0pt
 		}
 
-		.c34 {
+		.c28 {
+			font-style: normal
+		}
+
+		.c21 {
 			height: 9pt
 		}
 
-		.c11 {
+		.c13 {
 			font-weight: 700
 		}
 
-		.c22 {
+		.c4 {
 			font-weight: 400
 		}
 
@@ -553,82 +528,79 @@
 	</style>
 </head>
 
-<body class="c24">
-	<p class="c0"><span class="c5"></span></p><a id="t.34583b7b6d6d897c6ff4c6e68c302974641a027d"></a><a id="t.0"></a>
-	<table class="c6">
+<body class="c3">
+	<p class="c21 c25"><span class="c12 c4"></span></p><a id="t.34583b7b6d6d897c6ff4c6e68c302974641a027d"></a><a
+		id="t.0"></a>
+	<table class="c20">
 		<tbody>
-			<tr class="c10">
-				<td class="c13" colspan="1" rowspan="1">
-					<p class="c26 title" id="h.x8fm1uorkbaw"><span class="c11 c21">Fung, Yau Ho</span></p>
-					<p class="c29 subtitle" id="h.ymi089liagec"><span class="c25 c22">Software Engineer | Full-Stack
+			<tr class="c26">
+				<td class="c5" colspan="1" rowspan="1">
+					<p class="c32 title" id="h.x8fm1uorkbaw"><span class="c13 c18">Fung, Yau Ho</span></p>
+					<p class="c7 subtitle" id="h.ymi089liagec"><span class="c28 c4 c30">Software Engineer | Full-Stack
 							Developer</span></p>
 				</td>
-				<td class="c15" colspan="1" rowspan="1">
-					<p class="c29"><span class="c1"><a class="c16"
+				<td class="c27" colspan="1" rowspan="1">
+					<p class="c7"><span class="c24 c13 c31"><a class="c6"
 								href="mailto:yauho.fung@student.mec.cuny.edu">yauho.fung@student.mec.cuny.edu</a></span></p>
-					<p class="c29"><span class="c1"><a class="c16"
-								href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1614468894940000&amp;usg=AOvVaw3dl_FF09tKyANXSDdzY490">https://github.com/yauhofung</a></span>
+					<p class="c7"><span class="c24 c31 c13"><a class="c6"
+								href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1614469905847000&amp;usg=AOvVaw2fUW98ZwRpxCnZuXrVCcg2">https://github.com/yauhofung</a></span>
 					</p>
 				</td>
 			</tr>
-			<tr class="c10">
-				<td class="c13" colspan="1" rowspan="1">
-					<h1 class="c4" id="h.yk8luflkpwij"><span>EDUCATION</span></h1>
-					<h2 class="c20" id="h.6wymnhinx9q5"><span>Medgar Evers College</span><span class="c22">&nbsp;&mdash;
-						</span><span class="c9 c8">Computer Science B.S.</span></h2>
-					<h3 class="c18" id="h.7vtcyzeczjot"><span>August 2020 - Present</span></h3>
-					<p class="c17"><span class="c19">GPA: 3.911</span></p>
-					<h2 class="c20" id="h.fk6mqy3kk6cl"><span>Medgar Evers College</span><span class="c22">&nbsp;&mdash;
-						</span><span class="c8 c9">Computer Science A.S.</span></h2>
-					<h3 class="c18" id="h.mdqqdae02gby"><span>August 2018 - May 2020</span></h3>
-					<p class="c17"><span class="c19">GPA: 3.885</span></p>
-					<h1 class="c4" id="h.4m6wmztera0o"><span>PROJECTS</span></h1>
-					<h2 class="c20" id="h.vm051rmyhoww"><span>Movie Search Engine</span><span>&nbsp;</span><span
-							class="c22">&mdash; </span><span class="c8">Tech Talent Pipeline Capstone</span></h2>
-					<p class="c17"><span class="c23"><a class="c16"
-								href="https://www.google.com/url?q=https://ttp0-cap.herokuapp.com/&amp;sa=D&amp;source=editors&amp;ust=1614468894941000&amp;usg=AOvVaw37kmeRZ0bH2ZARRQJ595uC">https://ttp0-cap.herokuapp.com/</a></span>
+			<tr class="c26">
+				<td class="c5" colspan="1" rowspan="1">
+					<h1 class="c14" id="h.yk8luflkpwij"><span>EDUCATION</span></h1>
+					<h2 class="c9" id="h.6wymnhinx9q5"><span>Medgar Evers College</span><span class="c4">&nbsp;&mdash;
+						</span><span class="c17 c0">Computer Science B.S.</span></h2>
+					<h3 class="c15" id="h.7vtcyzeczjot"><span>August 2020 - Present</span></h3>
+					<p class="c1"><span class="c11 c4">GPA: 3.911</span></p>
+					<h2 class="c9" id="h.fk6mqy3kk6cl"><span>Medgar Evers College</span><span class="c4">&nbsp;&mdash;
+						</span><span class="c17 c0">Computer Science A.S.</span></h2>
+					<h3 class="c15" id="h.mdqqdae02gby"><span>August 2018 - May 2020</span></h3>
+					<p class="c1"><span class="c11 c4">GPA: 3.885</span></p>
+					<h1 class="c14" id="h.4m6wmztera0o"><span>PROJECTS</span></h1>
+					<h2 class="c9" id="h.vm051rmyhoww"><span>Movie Search Engine</span><span>&nbsp;</span><span class="c4">&mdash;
+						</span><span class="c0">Tech Talent Pipeline Capstone</span></h2>
+					<p class="c1"><span class="c24"><a class="c6"
+								href="https://www.google.com/url?q=https://ttp0-cap.herokuapp.com/&amp;sa=D&amp;source=editors&amp;ust=1614469905850000&amp;usg=AOvVaw1PK0FBJtIFKz7wNHgnsLL4">https://ttp0-cap.herokuapp.com/</a></span>
 					</p>
-					<h1 class="c4" id="h.y7d3xdxnr44m"><span class="c3">EXPERIENCE</span></h1>
-					<h2 class="c20" id="h.rfgvkg2ifhfd"><span>MEC Ed Tech Center</span><span class="c22">&nbsp;&mdash;
-						</span><span class="c8">Computer Lab Technician</span></h2>
-					<h3 class="c18" id="h.n64fgzu3lwuy"><span>October 2019 - March 2020</span></h3>
-					<p class="c17"><span class="c19">Provided CUNY Blackboard technical support for the students and faculty of
+					<h1 class="c14" id="h.y7d3xdxnr44m"><span class="c2">EXPERIENCE</span></h1>
+					<h2 class="c9" id="h.rfgvkg2ifhfd"><span>MEC Ed Tech Center</span><span class="c4">&nbsp;&mdash; </span><span
+							class="c0">Computer Lab Technician</span></h2>
+					<h3 class="c15" id="h.n64fgzu3lwuy"><span>October 2019 - March 2020</span></h3>
+					<p class="c1"><span class="c4 c11">Provided CUNY Blackboard technical support for the students and faculty of
 							Medgar Evers College.<br>Responded to phone calls and orders from the supervisor.</span></p>
-					<h2 class="c20" id="h.wj0puh61kxsr"><span>Brooklyn Child Care Inc.</span><span class="c22">&nbsp;&mdash;
-						</span><span class="c9 c8">Teaching Assistant</span></h2>
-					<h3 class="c18" id="h.8hk593fs3sag"><span>July 2017</span><span class="c12">&nbsp;- July 2017, July 2015 -
+					<h2 class="c9" id="h.wj0puh61kxsr"><span>Brooklyn Child Care Inc.</span><span class="c4">&nbsp;&mdash;
+						</span><span class="c0 c17">Teaching Assistant</span></h2>
+					<h3 class="c15" id="h.8hk593fs3sag"><span>July 2017</span><span class="c23 c4">&nbsp;- July 2017, July 2015 -
 							August 2015</span></h3>
-					<p class="c17"><span class="c19">Provided general support for the teacher&#39;s schooling.<br>Ensured the
+					<p class="c1"><span class="c11 c4">Provided general support for the teacher&#39;s schooling.<br>Ensured the
 							safety and welfare of toddlers and young children.<br>Performed basic sanitary tasks.</span></p>
-					<h2 class="c20" id="h.1hxcpsc1hco2"><span>Staples </span><span class="c22">&mdash; </span><span
-							class="c9 c8">Retail Associate</span></h2>
-					<h3 class="c18" id="h.ybypdmed418m"><span>July 2016 - August 2016</span></h3>
-					<p class="c17"><span class="c19">Restocked and organized shelves.<br>Responded to in-store customer service
+					<h2 class="c9" id="h.1hxcpsc1hco2"><span>Staples </span><span class="c4">&mdash; </span><span
+							class="c17 c0">Retail Associate</span></h2>
+					<h3 class="c15" id="h.ybypdmed418m"><span>July 2016 - August 2016</span></h3>
+					<p class="c1"><span class="c11 c4">Restocked and organized shelves.<br>Responded to in-store customer service
 							and orders from the supervisor.<br>Performed basic sanitary tasks.</span></p>
 				</td>
-				<td class="c15" colspan="1" rowspan="1">
-					<h1 class="c4" id="h.ca0awj8022e2"><span class="c3">SKILLS</span></h1>
-					<ul class="c30 lst-kix_d52h1clnbs3c-0 start">
-						<li class="c27"><span class="c19">Languages: C++, Python, HTML, CSS, JavaScript, Java, SQL</span></li>
-						<li class="c17 c28"><span class="c19">Libraries: Material-UI, ReactJS, Materialize</span></li>
-					</ul>
-					<ul class="c30 lst-kix_3expns8knkd9-0 start">
-						<li class="c17 c28"><span class="c19">Editors: Visual Studio Code, Repl.it, VIM</span></li>
-					</ul>
-					<h1 class="c4" id="h.tuxh7mwdaxox"><span class="c3">AWARDS</span></h1>
-					<p class="c33"><span class="c11">Medgar Evers College</span><span><br></span><span>Online Programming Contest
+				<td class="c27" colspan="1" rowspan="1">
+					<h1 class="c14" id="h.ca0awj8022e2"><span class="c2">SKILLS</span></h1>
+					<p class="c19"><span class="c11 c4">Languages: C++, Python, HTML, CSS, JavaScript, Java, SQL</span></p>
+					<p class="c1"><span class="c11 c4">Libraries: Material-UI, ReactJS, Materialize</span></p>
+					<p class="c1"><span class="c11 c4">Editors: Visual Studio Code, Repl.it, VIM</span></p>
+					<h1 class="c14" id="h.tuxh7mwdaxox"><span class="c2">AWARDS</span></h1>
+					<p class="c19"><span class="c13">Medgar Evers College</span><span><br></span><span>Online Programming Contest
 							First Place Winner<br>May 2020</span></p>
-					<p class="c17"><span class="c11">Medgar Evers College</span><span><br></span><span>Dean&rsquo;s List<br>June
+					<p class="c1"><span class="c13">Medgar Evers College</span><span><br></span><span>Dean&rsquo;s List<br>June
 							2020, January 2020, June 2019</span></p>
-					<p class="c17"><span class="c11">College Board</span><span><br></span><span class="c19">AP Scholar with
+					<p class="c1"><span class="c13">College Board</span><span><br></span><span class="c11 c4">AP Scholar with
 							Distinction<br>July 2018</span></p>
-					<h1 class="c4" id="h.cxxkes25b26"><span>LANGUAGES</span></h1>
-					<p class="c33"><span class="c19">English, Cantonese, Mandarin</span></p>
+					<h1 class="c14" id="h.cxxkes25b26"><span>LANGUAGES</span></h1>
+					<p class="c19"><span class="c11 c4">English, Cantonese, Mandarin</span></p>
 				</td>
 			</tr>
 		</tbody>
 	</table>
-	<p class="c17 c34"><span class="c5"></span></p>
+	<p class="c1 c21"><span class="c4 c12"></span></p>
 </body>
 
 </html>
