--- a/about/FungResume.html
+++ b/about/FungResume.html
@@ -160,25 +160,7 @@
 			padding: 0
 		}
 
-		.c27 {
-			border-right-style: solid;
-			padding: 7.2pt 7.2pt 7.2pt 7.2pt;
-			border-bottom-color: #ffffff;
-			border-top-width: 0pt;
-			border-right-width: 0pt;
-			border-left-color: #ffffff;
-			vertical-align: top;
-			border-right-color: #ffffff;
-			border-left-width: 0pt;
-			border-top-style: solid;
-			border-left-style: solid;
-			border-bottom-width: 0pt;
-			width: 201.6pt;
-			border-top-color: #ffffff;
-			border-bottom-style: solid
-		}
-
-		.c5 {
+		.c12 {
 			border-right-style: solid;
 			padding: 7.2pt 7.2pt 7.2pt 7.2pt;
 			border-bottom-color: #ffffff;
@@ -196,17 +178,25 @@
 			border-bottom-style: solid
 		}
 
-		.c8 {
-			color: #000000;
-			font-weight: 700;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Open Sans";
-			font-style: normal
+		.c7 {
+			border-right-style: solid;
+			padding: 7.2pt 7.2pt 7.2pt 7.2pt;
+			border-bottom-color: #ffffff;
+			border-top-width: 0pt;
+			border-right-width: 0pt;
+			border-left-color: #ffffff;
+			vertical-align: top;
+			border-right-color: #ffffff;
+			border-left-width: 0pt;
+			border-top-style: solid;
+			border-left-style: solid;
+			border-bottom-width: 0pt;
+			width: 201.6pt;
+			border-top-color: #ffffff;
+			border-bottom-style: solid
 		}
 
-		.c2 {
+		.c6 {
 			color: #2079c7;
 			font-weight: 700;
 			text-decoration: none;
@@ -216,16 +206,36 @@
 			font-style: normal
 		}
 
-		.c16 {
-			color: #666666;
+		.c8 {
+			color: #2079c7;
+			font-weight: 700;
 			text-decoration: none;
 			vertical-align: baseline;
-			font-size: 8pt;
+			font-size: 10pt;
+			font-family: "Open Sans";
+			font-style: normal
+		}
+
+		.c2 {
+			color: #000000;
+			font-weight: 700;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 36pt;
 			font-family: "Merriweather";
 			font-style: normal
 		}
 
-		.c12 {
+		.c11 {
+			-webkit-text-decoration-skip: none;
+			color: #1155cc;
+			font-weight: 700;
+			text-decoration: underline;
+			text-decoration-skip-ink: none;
+			font-family: "Open Sans"
+		}
+
+		.c22 {
 			color: #666666;
 			text-decoration: none;
 			vertical-align: baseline;
@@ -234,25 +244,16 @@
 			font-style: normal
 		}
 
-		.c15 {
-			padding-top: 5pt;
-			padding-bottom: 5pt;
-			line-height: 1.0;
-			page-break-after: avoid;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c18 {
-			color: #000000;
+		.c1 {
+			color: #666666;
 			text-decoration: none;
 			vertical-align: baseline;
-			font-size: 36pt;
+			font-size: 8pt;
 			font-family: "Merriweather";
 			font-style: normal
 		}
 
-		.c9 {
+		.c17 {
 			padding-top: 16pt;
 			padding-bottom: 0pt;
 			line-height: 1.0;
@@ -261,7 +262,7 @@
 			margin-right: 15pt
 		}
 
-		.c11 {
+		.c15 {
 			color: #666666;
 			text-decoration: none;
 			vertical-align: baseline;
@@ -270,7 +271,7 @@
 			font-style: normal
 		}
 
-		.c23 {
+		.c3 {
 			color: #666666;
 			text-decoration: none;
 			vertical-align: baseline;
@@ -279,7 +280,7 @@
 			font-style: normal
 		}
 
-		.c22 {
+		.c25 {
 			color: #b7b7b7;
 			text-decoration: none;
 			vertical-align: baseline;
@@ -288,7 +289,25 @@
 			font-style: normal
 		}
 
-		.c17 {
+		.c5 {
+			padding-top: 5pt;
+			padding-bottom: 5pt;
+			line-height: 1.0;
+			page-break-after: avoid;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c26 {
+			color: #000000;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 9pt;
+			font-family: "Open Sans";
+			font-style: normal
+		}
+
+		.c20 {
 			color: #000000;
 			text-decoration: none;
 			vertical-align: baseline;
@@ -297,46 +316,6 @@
 		}
 
 		.c29 {
-			color: #2079c7;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 10pt;
-			font-family: "Open Sans"
-		}
-
-		.c1 {
-			padding-top: 6pt;
-			padding-bottom: 0pt;
-			line-height: 1.3;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c14 {
-			padding-top: 30pt;
-			padding-bottom: 0pt;
-			line-height: 1.0;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c10 {
-			color: #000000;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 12pt;
-			font-family: "Merriweather"
-		}
-
-		.c19 {
-			padding-top: 16pt;
-			padding-bottom: 0pt;
-			line-height: 1.3;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c25 {
 			padding-top: 6pt;
 			padding-bottom: 0pt;
 			line-height: 1.0;
@@ -344,7 +323,15 @@
 			margin-right: 15pt
 		}
 
-		.c32 {
+		.c4 {
+			padding-top: 6pt;
+			padding-bottom: 0pt;
+			line-height: 1.3;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c31 {
 			padding-top: 0pt;
 			padding-bottom: 6pt;
 			line-height: 1.0;
@@ -352,15 +339,15 @@
 			margin-right: 15pt
 		}
 
-		.c30 {
-			color: #000000;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Open Sans"
+		.c10 {
+			padding-top: 16pt;
+			padding-bottom: 0pt;
+			line-height: 1.3;
+			text-align: left;
+			margin-right: 15pt
 		}
 
-		.c7 {
+		.c24 {
 			padding-top: 0pt;
 			padding-bottom: 0pt;
 			line-height: 1.15;
@@ -368,57 +355,68 @@
 			margin-right: 15pt
 		}
 
-		.c20 {
-			border-spacing: 0;
-			border-collapse: collapse;
-			margin-right: auto
+		.c19 {
+			color: #000000;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 12pt;
+			font-family: "Merriweather"
 		}
 
-		.c24 {
+		.c9 {
+			padding-top: 30pt;
+			padding-bottom: 0pt;
+			line-height: 1.0;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c23 {
 			text-decoration-skip-ink: none;
 			-webkit-text-decoration-skip: none;
 			color: #1155cc;
 			text-decoration: underline
 		}
 
-		.c3 {
+		.c27 {
+			border-spacing: 0;
+			border-collapse: collapse;
+			margin-right: auto
+		}
+
+		.c18 {
 			background-color: #ffffff;
 			max-width: 525.6pt;
 			padding: 28.8pt 43.2pt 43.2pt 43.2pt
 		}
 
-		.c6 {
+		.c28 {
 			color: inherit;
 			text-decoration: inherit
 		}
 
 		.c0 {
-			font-weight: 400;
-			font-style: italic
+			font-weight: 400
 		}
 
-		.c31 {
-			font-family: "Open Sans"
-		}
-
-		.c26 {
-			height: 0pt
-		}
-
-		.c28 {
+		.c30 {
 			font-style: normal
 		}
 
-		.c21 {
+		.c13 {
 			height: 9pt
 		}
 
-		.c13 {
+		.c14 {
 			font-weight: 700
 		}
 
-		.c4 {
-			font-weight: 400
+		.c16 {
+			font-style: italic
+		}
+
+		.c21 {
+			height: 0pt
 		}
 
 		.title {
@@ -528,79 +526,79 @@
 	</style>
 </head>
 
-<body class="c3">
-	<p class="c21 c25"><span class="c12 c4"></span></p><a id="t.34583b7b6d6d897c6ff4c6e68c302974641a027d"></a><a
+<body class="c18">
+	<p class="c13 c29"><span class="c22 c0"></span></p><a id="t.f94a1da5c280c301190171f60e16228b1ddf9000"></a><a
 		id="t.0"></a>
-	<table class="c20">
+	<table class="c27">
 		<tbody>
-			<tr class="c26">
-				<td class="c5" colspan="1" rowspan="1">
-					<p class="c32 title" id="h.x8fm1uorkbaw"><span class="c13 c18">Fung, Yau Ho</span></p>
-					<p class="c7 subtitle" id="h.ymi089liagec"><span class="c28 c4 c30">Software Engineer | Full-Stack
+			<tr class="c21">
+				<td class="c12" colspan="1" rowspan="1">
+					<p class="c31 title" id="h.x8fm1uorkbaw"><span class="c2">Fung, Yau Ho</span></p>
+					<p class="c24 subtitle" id="h.ymi089liagec"><span class="c0 c26">Software Engineer | Full-Stack
 							Developer</span></p>
 				</td>
-				<td class="c27" colspan="1" rowspan="1">
-					<p class="c7"><span class="c24 c13 c31"><a class="c6"
+				<td class="c7" colspan="1" rowspan="1">
+					<p class="c24"><span class="c11"><a class="c28"
 								href="mailto:yauho.fung@student.mec.cuny.edu">yauho.fung@student.mec.cuny.edu</a></span></p>
-					<p class="c7"><span class="c24 c31 c13"><a class="c6"
-								href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1614469905847000&amp;usg=AOvVaw2fUW98ZwRpxCnZuXrVCcg2">https://github.com/yauhofung</a></span>
+					<p class="c24"><span class="c11"><a class="c28"
+								href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1614984977572000&amp;usg=AOvVaw24W-Zo3nVfFsSgydBhf823">https://github.com/yauhofung</a></span>
 					</p>
 				</td>
 			</tr>
-			<tr class="c26">
-				<td class="c5" colspan="1" rowspan="1">
-					<h1 class="c14" id="h.yk8luflkpwij"><span>EDUCATION</span></h1>
-					<h2 class="c9" id="h.6wymnhinx9q5"><span>Medgar Evers College</span><span class="c4">&nbsp;&mdash;
-						</span><span class="c17 c0">Computer Science B.S.</span></h2>
-					<h3 class="c15" id="h.7vtcyzeczjot"><span>August 2020 - Present</span></h3>
-					<p class="c1"><span class="c11 c4">GPA: 3.911</span></p>
-					<h2 class="c9" id="h.fk6mqy3kk6cl"><span>Medgar Evers College</span><span class="c4">&nbsp;&mdash;
-						</span><span class="c17 c0">Computer Science A.S.</span></h2>
-					<h3 class="c15" id="h.mdqqdae02gby"><span>August 2018 - May 2020</span></h3>
-					<p class="c1"><span class="c11 c4">GPA: 3.885</span></p>
-					<h1 class="c14" id="h.4m6wmztera0o"><span>PROJECTS</span></h1>
-					<h2 class="c9" id="h.vm051rmyhoww"><span>Movie Search Engine</span><span>&nbsp;</span><span class="c4">&mdash;
-						</span><span class="c0">Tech Talent Pipeline Capstone</span></h2>
-					<p class="c1"><span class="c24"><a class="c6"
-								href="https://www.google.com/url?q=https://ttp0-cap.herokuapp.com/&amp;sa=D&amp;source=editors&amp;ust=1614469905850000&amp;usg=AOvVaw1PK0FBJtIFKz7wNHgnsLL4">https://ttp0-cap.herokuapp.com/</a></span>
+			<tr class="c21">
+				<td class="c12" colspan="1" rowspan="1">
+					<h1 class="c9" id="h.yk8luflkpwij"><span>EDUCATION</span></h1>
+					<h2 class="c17" id="h.6wymnhinx9q5"><span>Medgar Evers College</span><span class="c0">&nbsp;&mdash;
+						</span><span class="c20 c0 c16">Computer Science B.S.</span></h2>
+					<h3 class="c5" id="h.7vtcyzeczjot"><span>August 2020 - Present</span></h3>
+					<p class="c4"><span class="c15 c0">GPA: 3.911</span></p>
+					<h2 class="c17" id="h.fk6mqy3kk6cl"><span>Medgar Evers College</span><span class="c0">&nbsp;&mdash;
+						</span><span class="c20 c0 c16">Computer Science A.S.</span></h2>
+					<h3 class="c5" id="h.mdqqdae02gby"><span>August 2018 - May 2020</span></h3>
+					<p class="c4"><span class="c15 c0">GPA: 3.885</span></p>
+					<h1 class="c9" id="h.4m6wmztera0o"><span>PROJECTS</span></h1>
+					<h2 class="c17" id="h.vm051rmyhoww"><span>Movie Search Engine</span><span>&nbsp;</span><span
+							class="c0">&mdash; </span><span class="c0 c16">Tech Talent Pipeline Capstone</span></h2>
+					<p class="c4"><span class="c23"><a class="c28"
+								href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1614984977575000&amp;usg=AOvVaw15hhAPhWOi1mSavTlezzJz">https://github.com/yauhofung/MovieSearchEngine</a></span>
 					</p>
-					<h1 class="c14" id="h.y7d3xdxnr44m"><span class="c2">EXPERIENCE</span></h1>
-					<h2 class="c9" id="h.rfgvkg2ifhfd"><span>MEC Ed Tech Center</span><span class="c4">&nbsp;&mdash; </span><span
-							class="c0">Computer Lab Technician</span></h2>
-					<h3 class="c15" id="h.n64fgzu3lwuy"><span>October 2019 - March 2020</span></h3>
-					<p class="c1"><span class="c4 c11">Provided CUNY Blackboard technical support for the students and faculty of
+					<h1 class="c9" id="h.y7d3xdxnr44m"><span class="c6">EXPERIENCE</span></h1>
+					<h2 class="c17" id="h.rfgvkg2ifhfd"><span>MEC Ed Tech Center</span><span class="c0">&nbsp;&mdash; </span><span
+							class="c0 c16">Computer Lab Technician</span></h2>
+					<h3 class="c5" id="h.n64fgzu3lwuy"><span>October 2019 - March 2020</span></h3>
+					<p class="c4"><span class="c15 c0">Provided CUNY Blackboard technical support for the students and faculty of
 							Medgar Evers College.<br>Responded to phone calls and orders from the supervisor.</span></p>
-					<h2 class="c9" id="h.wj0puh61kxsr"><span>Brooklyn Child Care Inc.</span><span class="c4">&nbsp;&mdash;
-						</span><span class="c0 c17">Teaching Assistant</span></h2>
-					<h3 class="c15" id="h.8hk593fs3sag"><span>July 2017</span><span class="c23 c4">&nbsp;- July 2017, July 2015 -
+					<h2 class="c17" id="h.wj0puh61kxsr"><span>Brooklyn Child Care Inc.</span><span class="c0">&nbsp;&mdash;
+						</span><span class="c20 c0 c16">Teaching Assistant</span></h2>
+					<h3 class="c5" id="h.8hk593fs3sag"><span>July 2017</span><span class="c3 c0">&nbsp;- July 2017, July 2015 -
 							August 2015</span></h3>
-					<p class="c1"><span class="c11 c4">Provided general support for the teacher&#39;s schooling.<br>Ensured the
+					<p class="c4"><span class="c15 c0">Provided general support for the teacher&#39;s schooling.<br>Ensured the
 							safety and welfare of toddlers and young children.<br>Performed basic sanitary tasks.</span></p>
-					<h2 class="c9" id="h.1hxcpsc1hco2"><span>Staples </span><span class="c4">&mdash; </span><span
-							class="c17 c0">Retail Associate</span></h2>
-					<h3 class="c15" id="h.ybypdmed418m"><span>July 2016 - August 2016</span></h3>
-					<p class="c1"><span class="c11 c4">Restocked and organized shelves.<br>Responded to in-store customer service
+					<h2 class="c17" id="h.1hxcpsc1hco2"><span>Staples </span><span class="c0">&mdash; </span><span
+							class="c0 c16 c20">Retail Associate</span></h2>
+					<h3 class="c5" id="h.ybypdmed418m"><span>July 2016 - August 2016</span></h3>
+					<p class="c4"><span class="c15 c0">Restocked and organized shelves.<br>Responded to in-store customer service
 							and orders from the supervisor.<br>Performed basic sanitary tasks.</span></p>
 				</td>
-				<td class="c27" colspan="1" rowspan="1">
-					<h1 class="c14" id="h.ca0awj8022e2"><span class="c2">SKILLS</span></h1>
-					<p class="c19"><span class="c11 c4">Languages: C++, Python, HTML, CSS, JavaScript, Java, SQL</span></p>
-					<p class="c1"><span class="c11 c4">Libraries: Material-UI, ReactJS, Materialize</span></p>
-					<p class="c1"><span class="c11 c4">Editors: Visual Studio Code, Repl.it, VIM</span></p>
-					<h1 class="c14" id="h.tuxh7mwdaxox"><span class="c2">AWARDS</span></h1>
-					<p class="c19"><span class="c13">Medgar Evers College</span><span><br></span><span>Online Programming Contest
+				<td class="c7" colspan="1" rowspan="1">
+					<h1 class="c9" id="h.ca0awj8022e2"><span class="c6">SKILLS</span></h1>
+					<p class="c10"><span class="c15 c0">Languages: C++, Python, HTML, CSS, JavaScript, Java, SQL</span></p>
+					<p class="c4"><span class="c15 c0">Libraries: Material-UI, ReactJS, Materialize</span></p>
+					<p class="c4"><span class="c15 c0">Editors: Visual Studio Code, Repl.it, VIM</span></p>
+					<h1 class="c9" id="h.tuxh7mwdaxox"><span class="c6">AWARDS</span></h1>
+					<p class="c10"><span class="c14">Medgar Evers College</span><span><br></span><span>Online Programming Contest
 							First Place Winner<br>May 2020</span></p>
-					<p class="c1"><span class="c13">Medgar Evers College</span><span><br></span><span>Dean&rsquo;s List<br>June
+					<p class="c4"><span class="c14">Medgar Evers College</span><span><br></span><span>Dean&rsquo;s List<br>June
 							2020, January 2020, June 2019</span></p>
-					<p class="c1"><span class="c13">College Board</span><span><br></span><span class="c11 c4">AP Scholar with
+					<p class="c4"><span class="c14">College Board</span><span><br></span><span class="c0 c15">AP Scholar with
 							Distinction<br>July 2018</span></p>
-					<h1 class="c14" id="h.cxxkes25b26"><span>LANGUAGES</span></h1>
-					<p class="c19"><span class="c11 c4">English, Cantonese, Mandarin</span></p>
+					<h1 class="c9" id="h.cxxkes25b26"><span>LANGUAGES</span></h1>
+					<p class="c10"><span class="c15 c0">English, Cantonese, Mandarin</span></p>
 				</td>
 			</tr>
 		</tbody>
 	</table>
-	<p class="c1 c21"><span class="c4 c12"></span></p>
+	<p class="c4 c13"><span class="c0 c22"></span></p>
 </body>
 
 </html>
