--- a/about/FungResume.html
+++ b/about/FungResume.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 
 <head>
@@ -160,7 +159,7 @@
 			padding: 0
 		}
 
-		.c12 {
+		.c14 {
 			border-right-style: solid;
 			padding: 7.2pt 7.2pt 7.2pt 7.2pt;
 			border-bottom-color: #ffffff;
@@ -178,7 +177,7 @@
 			border-bottom-style: solid
 		}
 
-		.c7 {
+		.c20 {
 			border-right-style: solid;
 			padding: 7.2pt 7.2pt 7.2pt 7.2pt;
 			border-bottom-color: #ffffff;
@@ -196,8 +195,8 @@
 			border-bottom-style: solid
 		}
 
-		.c6 {
-			color: #2079c7;
+		.c1 {
+			color: #000000;
 			font-weight: 700;
 			text-decoration: none;
 			vertical-align: baseline;
@@ -206,17 +205,7 @@
 			font-style: normal
 		}
 
-		.c8 {
-			color: #2079c7;
-			font-weight: 700;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 10pt;
-			font-family: "Open Sans";
-			font-style: normal
-		}
-
-		.c2 {
+		.c13 {
 			color: #000000;
 			font-weight: 700;
 			text-decoration: none;
@@ -226,34 +215,45 @@
 			font-style: normal
 		}
 
-		.c11 {
-			-webkit-text-decoration-skip: none;
-			color: #1155cc;
+		.c2 {
+			color: #000000;
+			font-weight: 400;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 11pt;
+			font-family: "Merriweather";
+			font-style: italic
+		}
+
+		.c9 {
+			color: #2079c7;
 			font-weight: 700;
-			text-decoration: underline;
-			text-decoration-skip-ink: none;
-			font-family: "Open Sans"
-		}
-
-		.c22 {
-			color: #666666;
 			text-decoration: none;
 			vertical-align: baseline;
-			font-size: 1pt;
+			font-size: 9pt;
+			font-family: "Open Sans";
+			font-style: normal
+		}
+
+		.c21 {
+			color: #2079c7;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 10pt;
+			font-family: "Open Sans";
+			font-style: normal
+		}
+
+		.c31 {
+			color: #000000;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 11pt;
 			font-family: "Merriweather";
 			font-style: normal
 		}
 
-		.c1 {
-			color: #666666;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 8pt;
-			font-family: "Merriweather";
-			font-style: normal
-		}
-
-		.c17 {
+		.c0 {
 			padding-top: 16pt;
 			padding-bottom: 0pt;
 			line-height: 1.0;
@@ -262,7 +262,7 @@
 			margin-right: 15pt
 		}
 
-		.c15 {
+		.c6 {
 			color: #666666;
 			text-decoration: none;
 			vertical-align: baseline;
@@ -271,7 +271,16 @@
 			font-style: normal
 		}
 
-		.c3 {
+		.c16 {
+			color: #666666;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 8pt;
+			font-family: "Merriweather";
+			font-style: normal
+		}
+
+		.c7 {
 			color: #666666;
 			text-decoration: none;
 			vertical-align: baseline;
@@ -280,16 +289,7 @@
 			font-style: normal
 		}
 
-		.c25 {
-			color: #b7b7b7;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Open Sans";
-			font-style: normal
-		}
-
-		.c5 {
+		.c8 {
 			padding-top: 5pt;
 			padding-bottom: 5pt;
 			line-height: 1.0;
@@ -298,48 +298,33 @@
 			margin-right: 15pt
 		}
 
-		.c26 {
+		.c23 {
 			color: #000000;
 			text-decoration: none;
 			vertical-align: baseline;
-			font-size: 9pt;
-			font-family: "Open Sans";
+			font-size: 12pt;
+			font-family: "Merriweather";
+			font-style: italic
+		}
+
+		.c17 {
+			color: #666666;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 1pt;
+			font-family: "Merriweather";
 			font-style: normal
 		}
 
-		.c20 {
-			color: #000000;
+		.c28 {
+			color: #b7b7b7;
 			text-decoration: none;
 			vertical-align: baseline;
-			font-size: 11pt;
-			font-family: "Merriweather"
+			font-size: 9pt;
+			font-style: normal
 		}
 
-		.c29 {
-			padding-top: 6pt;
-			padding-bottom: 0pt;
-			line-height: 1.0;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c4 {
-			padding-top: 6pt;
-			padding-bottom: 0pt;
-			line-height: 1.3;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c31 {
-			padding-top: 0pt;
-			padding-bottom: 6pt;
-			line-height: 1.0;
-			text-align: left;
-			margin-right: 15pt
-		}
-
-		.c10 {
+		.c3 {
 			padding-top: 16pt;
 			padding-bottom: 0pt;
 			line-height: 1.3;
@@ -347,7 +332,39 @@
 			margin-right: 15pt
 		}
 
-		.c24 {
+		.c32 {
+			padding-top: 0pt;
+			padding-bottom: 6pt;
+			line-height: 1.0;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c11 {
+			padding-top: 6pt;
+			padding-bottom: 0pt;
+			line-height: 1.3;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c30 {
+			color: #000000;
+			text-decoration: none;
+			vertical-align: baseline;
+			font-size: 9pt;
+			font-style: normal
+		}
+
+		.c26 {
+			padding-top: 6pt;
+			padding-bottom: 0pt;
+			line-height: 1.0;
+			text-align: left;
+			margin-right: 15pt
+		}
+
+		.c19 {
 			padding-top: 0pt;
 			padding-bottom: 0pt;
 			line-height: 1.15;
@@ -355,15 +372,7 @@
 			margin-right: 15pt
 		}
 
-		.c19 {
-			color: #000000;
-			text-decoration: none;
-			vertical-align: baseline;
-			font-size: 12pt;
-			font-family: "Merriweather"
-		}
-
-		.c9 {
+		.c5 {
 			padding-top: 30pt;
 			padding-bottom: 0pt;
 			line-height: 1.0;
@@ -371,52 +380,52 @@
 			margin-right: 15pt
 		}
 
-		.c23 {
+		.c22 {
 			text-decoration-skip-ink: none;
 			-webkit-text-decoration-skip: none;
 			color: #1155cc;
 			text-decoration: underline
 		}
 
-		.c27 {
+		.c24 {
 			border-spacing: 0;
 			border-collapse: collapse;
 			margin-right: auto
 		}
 
-		.c18 {
+		.c10 {
 			background-color: #ffffff;
 			max-width: 525.6pt;
 			padding: 28.8pt 43.2pt 43.2pt 43.2pt
 		}
 
-		.c28 {
+		.c12 {
 			color: inherit;
 			text-decoration: inherit
 		}
 
-		.c0 {
+		.c4 {
 			font-weight: 400
 		}
 
-		.c30 {
-			font-style: normal
-		}
-
-		.c13 {
-			height: 9pt
-		}
-
-		.c14 {
+		.c18 {
 			font-weight: 700
 		}
 
-		.c16 {
+		.c27 {
+			height: 0pt
+		}
+
+		.c29 {
 			font-style: italic
 		}
 
-		.c21 {
-			height: 0pt
+		.c25 {
+			font-family: "Open Sans"
+		}
+
+		.c15 {
+			height: 9pt
 		}
 
 		.title {
@@ -526,79 +535,81 @@
 	</style>
 </head>
 
-<body class="c18">
-	<p class="c13 c29"><span class="c22 c0"></span></p><a id="t.f94a1da5c280c301190171f60e16228b1ddf9000"></a><a
+<body class="c10">
+	<p class="c15 c26"><span class="c17 c4"></span></p><a id="t.1514762c66d0ded64906784eeff1c73fb8a32f8d"></a><a
 		id="t.0"></a>
-	<table class="c27">
+	<table class="c24">
 		<tbody>
-			<tr class="c21">
-				<td class="c12" colspan="1" rowspan="1">
-					<p class="c31 title" id="h.x8fm1uorkbaw"><span class="c2">Fung, Yau Ho</span></p>
-					<p class="c24 subtitle" id="h.ymi089liagec"><span class="c0 c26">Software Engineer | Full-Stack
+			<tr class="c27">
+				<td class="c14" colspan="1" rowspan="1">
+					<p class="c32 title" id="h.x8fm1uorkbaw"><span class="c13">Fung, Yau Ho</span></p>
+					<p class="c19 subtitle" id="h.ymi089liagec"><span class="c4 c25 c30">Software Engineer | Full-Stack
 							Developer</span></p>
 				</td>
-				<td class="c7" colspan="1" rowspan="1">
-					<p class="c24"><span class="c11"><a class="c28"
+				<td class="c20" colspan="1" rowspan="1">
+					<p class="c19"><span class="c22 c18 c25"><a class="c12"
 								href="mailto:yauho.fung@student.mec.cuny.edu">yauho.fung@student.mec.cuny.edu</a></span></p>
-					<p class="c24"><span class="c11"><a class="c28"
-								href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1614984977572000&amp;usg=AOvVaw24W-Zo3nVfFsSgydBhf823">https://github.com/yauhofung</a></span>
+					<p class="c19"><span class="c22 c18 c25"><a class="c12"
+								href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1624034048212000&amp;usg=AOvVaw3hjTRNZp5lEHEw9b1H04lA">https://github.com/yauhofung</a></span>
 					</p>
 				</td>
 			</tr>
-			<tr class="c21">
-				<td class="c12" colspan="1" rowspan="1">
-					<h1 class="c9" id="h.yk8luflkpwij"><span>EDUCATION</span></h1>
-					<h2 class="c17" id="h.6wymnhinx9q5"><span>Medgar Evers College</span><span class="c0">&nbsp;&mdash;
-						</span><span class="c20 c0 c16">Computer Science B.S.</span></h2>
-					<h3 class="c5" id="h.7vtcyzeczjot"><span>August 2020 - Present</span></h3>
-					<p class="c4"><span class="c15 c0">GPA: 3.911</span></p>
-					<h2 class="c17" id="h.fk6mqy3kk6cl"><span>Medgar Evers College</span><span class="c0">&nbsp;&mdash;
-						</span><span class="c20 c0 c16">Computer Science A.S.</span></h2>
-					<h3 class="c5" id="h.mdqqdae02gby"><span>August 2018 - May 2020</span></h3>
-					<p class="c4"><span class="c15 c0">GPA: 3.885</span></p>
-					<h1 class="c9" id="h.4m6wmztera0o"><span>PROJECTS</span></h1>
-					<h2 class="c17" id="h.vm051rmyhoww"><span>Movie Search Engine</span><span>&nbsp;</span><span
-							class="c0">&mdash; </span><span class="c0 c16">Tech Talent Pipeline Capstone</span></h2>
-					<p class="c4"><span class="c23"><a class="c28"
-								href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1614984977575000&amp;usg=AOvVaw15hhAPhWOi1mSavTlezzJz">https://github.com/yauhofung/MovieSearchEngine</a></span>
+			<tr class="c27">
+				<td class="c14" colspan="1" rowspan="1">
+					<h1 class="c5" id="h.yk8luflkpwij"><span>EDUCATION</span></h1>
+					<h2 class="c0" id="h.6wymnhinx9q5"><span>Medgar Evers College</span><span class="c4">&nbsp;&mdash;
+						</span><span class="c2">Computer Science B.S.</span></h2>
+					<h3 class="c8" id="h.7vtcyzeczjot"><span>August 2020 - Present</span></h3>
+					<p class="c11"><span class="c6 c4">GPA: 3.925</span></p>
+					<h2 class="c0" id="h.fk6mqy3kk6cl"><span>Medgar Evers College</span><span class="c4">&nbsp;&mdash;
+						</span><span class="c2">Computer Science A.S.</span></h2>
+					<h3 class="c8" id="h.mdqqdae02gby"><span>August 2018 - May 2020</span></h3>
+					<p class="c11"><span class="c6 c4">GPA: 3.885</span></p>
+					<h1 class="c5" id="h.4m6wmztera0o"><span>PROJECTS</span></h1>
+					<h2 class="c0" id="h.vm051rmyhoww"><span>Movie Search Engine</span><span>&nbsp;</span><span class="c4">&mdash;
+						</span><span class="c4 c29">Tech Talent Pipeline Capstone</span></h2>
+					<p class="c11"><span class="c22"><a class="c12"
+								href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1624034048215000&amp;usg=AOvVaw2EqE9Mo5KoR4scHMs-hCKt">https://github.com/yauhofung/MovieSearchEngine</a></span>
 					</p>
-					<h1 class="c9" id="h.y7d3xdxnr44m"><span class="c6">EXPERIENCE</span></h1>
-					<h2 class="c17" id="h.rfgvkg2ifhfd"><span>MEC Ed Tech Center</span><span class="c0">&nbsp;&mdash; </span><span
-							class="c0 c16">Computer Lab Technician</span></h2>
-					<h3 class="c5" id="h.n64fgzu3lwuy"><span>October 2019 - March 2020</span></h3>
-					<p class="c4"><span class="c15 c0">Provided CUNY Blackboard technical support for the students and faculty of
+					<h1 class="c5" id="h.y7d3xdxnr44m"><span class="c9">EXPERIENCE</span></h1>
+					<h2 class="c0" id="h.rfgvkg2ifhfd"><span>MEC Ed Tech Center</span><span class="c4">&nbsp;&mdash; </span><span
+							class="c4 c29">Computer Lab Technician</span></h2>
+					<h3 class="c8" id="h.n64fgzu3lwuy"><span>October 2019 - March 2020</span></h3>
+					<p class="c11"><span class="c6 c4">Provided CUNY Blackboard technical support for the students and faculty of
 							Medgar Evers College.<br>Responded to phone calls and orders from the supervisor.</span></p>
-					<h2 class="c17" id="h.wj0puh61kxsr"><span>Brooklyn Child Care Inc.</span><span class="c0">&nbsp;&mdash;
-						</span><span class="c20 c0 c16">Teaching Assistant</span></h2>
-					<h3 class="c5" id="h.8hk593fs3sag"><span>July 2017</span><span class="c3 c0">&nbsp;- July 2017, July 2015 -
+					<h2 class="c0" id="h.wj0puh61kxsr"><span>Brooklyn Child Care Inc.</span><span class="c4">&nbsp;&mdash;
+						</span><span class="c2">Teaching Assistant</span></h2>
+					<h3 class="c8" id="h.8hk593fs3sag"><span>July 2017</span><span class="c7 c4">&nbsp;- July 2017, July 2015 -
 							August 2015</span></h3>
-					<p class="c4"><span class="c15 c0">Provided general support for the teacher&#39;s schooling.<br>Ensured the
+					<p class="c11"><span class="c4 c6">Provided general support for the teacher&#39;s schooling.<br>Ensured the
 							safety and welfare of toddlers and young children.<br>Performed basic sanitary tasks.</span></p>
-					<h2 class="c17" id="h.1hxcpsc1hco2"><span>Staples </span><span class="c0">&mdash; </span><span
-							class="c0 c16 c20">Retail Associate</span></h2>
-					<h3 class="c5" id="h.ybypdmed418m"><span>July 2016 - August 2016</span></h3>
-					<p class="c4"><span class="c15 c0">Restocked and organized shelves.<br>Responded to in-store customer service
+					<h2 class="c0" id="h.1hxcpsc1hco2"><span>Staples </span><span class="c4">&mdash; </span><span
+							class="c2">Retail Associate</span></h2>
+					<h3 class="c8" id="h.ybypdmed418m"><span>July 2016 - August 2016</span></h3>
+					<p class="c11"><span class="c6 c4">Restocked and organized shelves.<br>Responded to in-store customer service
 							and orders from the supervisor.<br>Performed basic sanitary tasks.</span></p>
 				</td>
-				<td class="c7" colspan="1" rowspan="1">
-					<h1 class="c9" id="h.ca0awj8022e2"><span class="c6">SKILLS</span></h1>
-					<p class="c10"><span class="c15 c0">Languages: C++, Python, HTML, CSS, JavaScript, Java, SQL</span></p>
-					<p class="c4"><span class="c15 c0">Libraries: Material-UI, ReactJS, Materialize</span></p>
-					<p class="c4"><span class="c15 c0">Editors: Visual Studio Code, Repl.it, VIM</span></p>
-					<h1 class="c9" id="h.tuxh7mwdaxox"><span class="c6">AWARDS</span></h1>
-					<p class="c10"><span class="c14">Medgar Evers College</span><span><br></span><span>Online Programming Contest
-							First Place Winner<br>May 2020</span></p>
-					<p class="c4"><span class="c14">Medgar Evers College</span><span><br></span><span>Dean&rsquo;s List<br>June
-							2020, January 2020, June 2019</span></p>
-					<p class="c4"><span class="c14">College Board</span><span><br></span><span class="c0 c15">AP Scholar with
+				<td class="c20" colspan="1" rowspan="1">
+					<h1 class="c5" id="h.ca0awj8022e2"><span class="c9">SKILLS</span></h1>
+					<p class="c3"><span class="c6 c4">Languages: C++, Python, HTML, CSS, JavaScript, Java, SQL</span></p>
+					<p class="c11"><span class="c6 c4">Libraries: Material-UI, ReactJS, Materialize</span></p>
+					<p class="c11"><span class="c6 c4">Editors: Visual Studio Code, Replit, VIM</span></p>
+					<h1 class="c5" id="h.tuxh7mwdaxox"><span class="c9">AWARDS</span></h1>
+					<p class="c3"><span class="c18">Medgar Evers College</span><span><br>Dean&rsquo;s List<br>June 2021, December
+							2020, June 2020, January 2020, June 2019</span></p>
+					<p class="c11"><span class="c18">Medgar Evers College</span><span><br>Award of Outstanding Academic
+							Excellence<br>May 2020</span></p>
+					<p class="c11"><span class="c18">Medgar Evers College</span><span><br>First Place Winner of the CS Students
+							Programming Contest<br>May 2020</span></p>
+					<p class="c11"><span class="c18">College Board</span><span><br></span><span class="c6 c4">AP Scholar with
 							Distinction<br>July 2018</span></p>
-					<h1 class="c9" id="h.cxxkes25b26"><span>LANGUAGES</span></h1>
-					<p class="c10"><span class="c15 c0">English, Cantonese, Mandarin</span></p>
+					<h1 class="c5" id="h.cxxkes25b26"><span>LANGUAGES</span></h1>
+					<p class="c3"><span class="c6 c4">English, Cantonese, Mandarin</span></p>
 				</td>
 			</tr>
 		</tbody>
 	</table>
-	<p class="c4 c13"><span class="c0 c22"></span></p>
+	<p class="c11 c15"><span class="c4 c17"></span></p>
 </body>
 
 </html>
