--- a/about/YauHoFungResume.html
+++ b/about/YauHoFungResume.html
@@ -118,16 +118,16 @@
       table th {
         padding: 0;
       }
-      .c0 {
+      .c9 {
         color: #000000;
         font-weight: 400;
         text-decoration: none;
         vertical-align: baseline;
-        font-size: 11pt;
+        font-size: 26pt;
         font-family: "Times New Roman";
         font-style: normal;
       }
-      .c4 {
+      .c0 {
         padding-top: 0pt;
         padding-bottom: 0pt;
         line-height: 1.15;
@@ -136,16 +136,16 @@
         widows: 2;
         text-align: left;
       }
-      .c6 {
-        -webkit-text-decoration-skip: none;
+      .c2 {
         color: #000000;
-        text-decoration: underline;
+        font-weight: 400;
+        text-decoration: none;
         vertical-align: baseline;
-        text-decoration-skip-ink: none;
-        font-size: 11pt;
+        font-size: 9pt;
+        font-family: "Times New Roman";
         font-style: normal;
       }
-      .c7 {
+      .c11 {
         padding-top: 0pt;
         padding-bottom: 3pt;
         line-height: 1.15;
@@ -154,45 +154,45 @@
         widows: 2;
         text-align: left;
       }
-      .c1 {
+      .c8 {
         -webkit-text-decoration-skip: none;
-        color: #1155cc;
-        font-weight: 400;
-        text-decoration: underline;
-        text-decoration-skip-ink: none;
-        font-family: "Times New Roman";
-      }
-      .c11 {
         color: #000000;
-        text-decoration: none;
+        text-decoration: underline;
         vertical-align: baseline;
-        font-size: 26pt;
+        text-decoration-skip-ink: none;
         font-style: normal;
       }
-      .c5 {
+      .c7 {
         -webkit-text-decoration-skip: none;
         color: #1155cc;
         text-decoration: underline;
         text-decoration-skip-ink: none;
       }
-      .c10 {
+      .c5 {
         background-color: #ffffff;
         max-width: 540pt;
         padding: 36pt 36pt 36pt 36pt;
       }
-      .c2 {
-        font-weight: 700;
-        font-family: "Times New Roman";
-      }
-      .c9 {
-        font-weight: 400;
-        font-family: "Times New Roman";
-      }
       .c3 {
+        font-size: 9pt;
+        font-family: "Times New Roman";
+        font-weight: 700;
+      }
+      .c6 {
+        font-size: 9pt;
+        font-family: "Times New Roman";
+        font-weight: 400;
+      }
+      .c10 {
+        -webkit-text-decoration-skip: none;
+        text-decoration: underline;
+        text-decoration-skip-ink: none;
+      }
+      .c1 {
         color: inherit;
         text-decoration: inherit;
       }
-      .c8 {
+      .c4 {
         height: 11pt;
       }
       .title {
@@ -305,84 +305,97 @@
       }
     </style>
   </head>
-  <body class="c10">
-    <p class="c7 title" id="h.i0wgzwj9czi3">
-      <span class="c9 c11">Yau Ho Fung</span>
+  <body class="c5">
+    <p class="c11 title" id="h.i0wgzwj9czi3">
+      <span class="c9">Fung, Yau Ho</span>
     </p>
-    <p class="c4">
-      <span class="c1"
-        ><a class="c3" href="mailto:yauho.fung@student.mec.cuny.edu"
+    <p class="c0">
+      <span class="c7 c6"
+        ><a class="c1" href="mailto:yauho.fung@student.mec.cuny.edu"
           >Email</a
         ></span
-      ><span class="c9">&nbsp;| </span
-      ><span class="c1"
+      ><span class="c6">&nbsp;| </span
+      ><span class="c7 c6"
         ><a
-          class="c3"
-          href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1641980393646668&amp;usg=AOvVaw2NeMI6meAUTe5e5NqwxvN4"
+          class="c1"
+          href="https://www.google.com/url?q=https://github.com/yauhofung&amp;sa=D&amp;source=editors&amp;ust=1650294373699812&amp;usg=AOvVaw3zEIJECbISwjQSE1cVjdl3"
           >GitHub</a
         ></span
-      ><span class="c9">&nbsp;| </span
-      ><span class="c1"
+      ><span class="c6">&nbsp;| </span
+      ><span class="c7 c6"
         ><a
-          class="c3"
-          href="https://www.google.com/url?q=https://www.linkedin.com/in/yauhofung/&amp;sa=D&amp;source=editors&amp;ust=1641980393646945&amp;usg=AOvVaw0GH3OV0mzs8JVpbQDvdFzR"
+          class="c1"
+          href="https://www.google.com/url?q=https://www.linkedin.com/in/yauhofung/&amp;sa=D&amp;source=editors&amp;ust=1650294373700243&amp;usg=AOvVaw09xTOdEBYqY58NMvlfOK6E"
           >LinkedIn</a
         ></span
       >
     </p>
-    <p class="c4 c8"><span class="c0"></span></p>
-    <p class="c4"><span class="c6 c2">QUALIFICATIONS</span></p>
-    <p class="c4">
-      <span class="c2">Areas of Study:</span
-      ><span class="c0"
-        >&nbsp;Data Structures, Analysis of Algorithms, Object-Oriented
-        Programming, Software Engineering</span
-      >
-    </p>
-    <p class="c4">
-      <span class="c2">Programming Languages:</span
-      ><span class="c0"
+    <p class="c0 c4"><span class="c2"></span></p>
+    <p class="c0"><span class="c3 c10">QUALIFICATIONS</span></p>
+    <p class="c0">
+      <span class="c3">Programming Languages:</span
+      ><span class="c2"
         >&nbsp;C++, MATLAB, HTML, CSS, JavaScript, Python, Java, SQL</span
       >
     </p>
-    <p class="c4">
-      <span class="c2">Libraries:</span
-      ><span class="c0"
-        >&nbsp;Material-UI, ReactJS, Materialize, React Native, NativeBase</span
+    <p class="c0">
+      <span class="c3">Libraries:</span
+      ><span class="c2"
+        >&nbsp;React Native, Material-UI, ReactJS, Materialize, NativeBase,
+        NumPy, Pandas, Matplotlib, GeoPandas, Cartopy, HoloViews, GeoViews</span
       >
     </p>
-    <p class="c4">
-      <span class="c2">Version Control:</span
-      ><span class="c0">&nbsp;GitHub, Slack, Trello, Jira, Confluence</span>
+    <p class="c0">
+      <span class="c3">Version Control:</span
+      ><span class="c2"
+        >&nbsp;GitHub, GitLab, Slack, Trello, Jira, Confluence</span
+      >
     </p>
-    <p class="c4">
-      <span class="c2">Editors:</span
-      ><span class="c0">&nbsp;Visual Studio Code, Replit, VIM</span>
+    <p class="c0">
+      <span class="c3">Editors:</span
+      ><span class="c2">&nbsp;Visual Studio Code, Replit, VIM</span>
     </p>
-    <p class="c4">
-      <span class="c2">Languages:</span
-      ><span class="c9">&nbsp;English, Cantonese, Mandarin</span>
+    <p class="c0">
+      <span class="c3">Languages:</span
+      ><span class="c6">&nbsp;English, Cantonese, Mandarin</span>
     </p>
-    <p class="c4 c8"><span class="c0"></span></p>
-    <p class="c4"><span class="c6 c2">EXPERIENCE</span></p>
-    <p class="c4">
+    <p class="c0 c4"><span class="c2"></span></p>
+    <p class="c0"><span class="c8 c3">EXPERIENCE</span></p>
+    <p class="c0">
+      <span class="c3"
+        >NASA Goddard Space Flight Center, GISS RSP Software Development
+        Intern</span
+      ><span class="c2">&nbsp;(January 2022 - May 2022)</span>
+    </p>
+    <p class="c0">
       <span class="c2"
-        >Medgar Evers College, Tech Talent Pipeline Teaching Assistant</span
-      ><span class="c0">&nbsp;(January 2022 - Present)</span>
+        >Study the remote sensing process of collecting data on aerosols using
+        the Research Scanning Polarimeter (RSP) instrument. Debug and improve
+        upon the RSP mobile application. Recreate the RSP data visualizer
+        written in Interactive Data Language (IDL) using Python. Meet with the
+        assigned mentor to provide daily updates. Meet with the RSP team to
+        present weekly findings.</span
+      >
     </p>
-    <p class="c4">
-      <span class="c0"
+    <p class="c0">
+      <span class="c3"
+        >CUNY Medgar Evers College, Tech Talent Pipeline Teaching
+        Assistant</span
+      ><span class="c2">&nbsp;(January 2022 - January 2022)</span>
+    </p>
+    <p class="c0">
+      <span class="c2"
         >Assist the primary instructor&rsquo;s lectures and provide technical
         consultation during working sessions. Meet with the instructional staff
         for daily debriefings.</span
       >
     </p>
-    <p class="c4">
-      <span class="c2">The University of Vermont, NASA R3 Hackathon Worker</span
-      ><span class="c0">&nbsp;(November 2021 - Present)</span>
+    <p class="c0">
+      <span class="c3">The University of Vermont, NASA R3 Hackathon Worker</span
+      ><span class="c2">&nbsp;(November 2021 - January 2022)</span>
     </p>
-    <p class="c4">
-      <span class="c0"
+    <p class="c0">
+      <span class="c2"
         >Study the fundamental land cover classes as the application domain
         knowledge. Perform image labeling using Amazon SageMaker Ground Truth.
         Train machine-learning image classifiers with the labeled images. Test
@@ -392,126 +405,141 @@
         the training experiences and their effectiveness.</span
       >
     </p>
-    <p class="c4">
-      <span class="c2">Uvii, Associate Project Manager</span
-      ><span class="c9">&nbsp;(</span
-      ><span class="c0">August 2021 - Present)</span>
+    <p class="c0">
+      <span class="c3">Uvii, Inc.</span
+      ><span class="c3">, Associate Project Manager</span
+      ><span class="c6">&nbsp;(</span
+      ><span class="c2">August 2021 - January 2022)</span>
     </p>
-    <p class="c4">
-      <span class="c0"
+    <p class="c0">
+      <span class="c2"
         >Document goals for sprints. Meet with the development team to discuss
         blockers. Delegate founder assignments to team members. Review tasks
         during sprint review meetings. Record and document Zoom recordings via
         the company drive.</span
       >
     </p>
-    <p class="c4">
-      <span class="c2">Medgar Evers College, CS Dojo Teaching Assistant</span
-      ><span class="c0">&nbsp;(October 2021 - December 2021)</span>
+    <p class="c0">
+      <span class="c3"
+        >CUNY Medgar Evers College, CS Dojo Teaching Assistant</span
+      ><span class="c2">&nbsp;(October 2021 - December 2021)</span>
     </p>
-    <p class="c4">
-      <span class="c0"
+    <p class="c0">
+      <span class="c2"
         >Design weekly C++ projects. Meet with students to receive progress
         updates and offer programming assistance. Verify weekly submissions for
         completions.</span
       >
     </p>
-    <p class="c4">
-      <span class="c2">Medgar Evers College, CUNY 2X Tech Tutor</span
-      ><span class="c0">&nbsp;(October 2021 - December 2021)</span>
+    <p class="c0">
+      <span class="c3">CUNY Medgar Evers College, CUNY 2X Tech Tutor</span
+      ><span class="c2">&nbsp;(October 2021 - December 2021)</span>
     </p>
-    <p class="c4">
-      <span class="c0"
+    <p class="c0">
+      <span class="c2"
         >Host weekly office hours. Schedule one-on-one meetings with CS/CIS
         students in need of tutoring.</span
       >
     </p>
-    <p class="c4">
-      <span class="c2">Uvii, Quality Assurance Tester / Debugger</span
-      ><span class="c9">&nbsp;(</span
-      ><span class="c0">June 2021 - August 2021)</span>
+    <p class="c0">
+      <span class="c3">Uvii, Inc., Quality Assurance Tester / Debugger</span
+      ><span class="c6">&nbsp;(</span
+      ><span class="c2">June 2021 - August 2021)</span>
     </p>
-    <p class="c4">
-      <span class="c0"
+    <p class="c0">
+      <span class="c2"
         >Stress test features for bugs and improvements. Submit bug
         reports/fixes to the development team for review. Support the product
         team with UI/UX insights.</span
       >
     </p>
-    <p class="c4">
-      <span class="c2">MEC Ed Tech Center, Computer Lab Assistant</span
-      ><span class="c9">&nbsp;(</span
-      ><span class="c0">October 2019 - March 2020)</span>
+    <p class="c0">
+      <span class="c3"
+        >MEC Education Technology Center, Computer Lab Technician</span
+      ><span class="c6">&nbsp;(</span
+      ><span class="c2">October 2019 - March 2020)</span>
     </p>
-    <p class="c4">
-      <span class="c0"
+    <p class="c0">
+      <span class="c2"
         >Provide students and faculty with CUNY Blackboard support. Respond to
         phone calls and orders from the supervisor.</span
       >
     </p>
-    <p class="c4 c8"><span class="c0"></span></p>
-    <p class="c4"><span class="c6 c2">PROJECTS</span></p>
-    <p class="c4">
-      <span class="c5 c2"
+    <p class="c0 c4"><span class="c2"></span></p>
+    <p class="c0"><span class="c8 c3">PROJECTS</span></p>
+    <p class="c0">
+      <span class="c3 c7"
         ><a
-          class="c3"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/AnimationTest&amp;sa=D&amp;source=editors&amp;ust=1641980393649479&amp;usg=AOvVaw1a8XSHKmoam9xrSqrParMX"
+          class="c1"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/PandemicSimulation&amp;sa=D&amp;source=editors&amp;ust=1650294373707099&amp;usg=AOvVaw2hPgkJTm2Ph13kdHeCj7Jk"
+          >MATLAB Pandemic Simulation</a
+        ></span
+      ><span class="c3">, Scientific Programming Final Project</span
+      ><span class="c6">&nbsp;(December 2021)</span>
+    </p>
+    <p class="c0">
+      <span class="c7 c3"
+        ><a
+          class="c1"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/AnimationTest&amp;sa=D&amp;source=editors&amp;ust=1650294373707825&amp;usg=AOvVaw2KJDS0RVfWa3JEplSP0cyp"
           >C++ Animation Test</a
         ></span
-      ><span class="c2">, Personal Experimental Project</span
-      ><span class="c0">&nbsp;(November 2021)</span>
+      ><span class="c3">, Personal Experimental Project</span
+      ><span class="c2">&nbsp;(November 2021)</span>
     </p>
-    <p class="c4">
-      <span class="c2 c5"
+    <p class="c0">
+      <span class="c7 c3"
         ><a
-          class="c3"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1641980393649828&amp;usg=AOvVaw2UwTzqW-8VA7j4oTZEL5Qo"
+          class="c1"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/MovieSearchEngine&amp;sa=D&amp;source=editors&amp;ust=1650294373708309&amp;usg=AOvVaw3X_vZ7HrxbnILlD-tuKIZx"
           >Movie Search Engine</a
         ></span
-      ><span class="c2">, CUNY 2X Tech Talent Pipeline Capstone Project</span
-      ><span class="c0">&nbsp;(January 2021)</span>
+      ><span class="c3">, CUNY 2X Tech Talent Pipeline Capstone Project</span
+      ><span class="c2">&nbsp;(January 2021)</span>
     </p>
-    <p class="c4">
-      <span class="c5 c2"
+    <p class="c0">
+      <span class="c7 c3"
         ><a
-          class="c3"
-          href="https://www.google.com/url?q=https://github.com/yauhofung/RandomGenerator&amp;sa=D&amp;source=editors&amp;ust=1641980393650146&amp;usg=AOvVaw1JdX7wtyQlAetQ6ANjkwq5"
+          class="c1"
+          href="https://www.google.com/url?q=https://github.com/yauhofung/RandomGenerator&amp;sa=D&amp;source=editors&amp;ust=1650294373708712&amp;usg=AOvVaw0uQ7Z4iz9TsHGYFuqDP3XY"
           >C++ Random Generator</a
         ></span
-      ><span class="c2">, Personal Experimental Project</span
-      ><span class="c0">&nbsp;(October 2019)</span>
+      ><span class="c3">, Personal Experimental Project</span
+      ><span class="c2">&nbsp;(October 2019)</span>
     </p>
-    <p class="c4 c8"><span class="c0"></span></p>
-    <p class="c4"><span class="c2 c6">EDUCATION</span></p>
-    <p class="c4">
-      <span class="c2">Medgar Evers College, Computer Science B.S.</span
-      ><span class="c0">&nbsp;(August 2018 - December 2021)</span>
+    <p class="c0 c4"><span class="c2"></span></p>
+    <p class="c0"><span class="c3 c8">EDUCATION</span></p>
+    <p class="c0">
+      <span class="c3">CUNY </span
+      ><span class="c3">Medgar Evers College, Computer Science B.S.</span
+      ><span class="c2">&nbsp;(August 2018 - December 2021)</span>
     </p>
-    <p class="c4"><span class="c0">3.928 GPA</span></p>
-    <p class="c4 c8"><span class="c0"></span></p>
-    <p class="c4"><span class="c6 c2">ACHIEVEMENTS</span></p>
-    <p class="c4">
-      <span class="c2">Medgar Evers College, </span
-      ><span class="c2">Dean&rsquo;s List</span
-      ><span class="c0"
+    <p class="c0"><span class="c2">3.928 GPA</span></p>
+    <p class="c0 c4"><span class="c2"></span></p>
+    <p class="c0"><span class="c8 c3">ACHIEVEMENTS</span></p>
+    <p class="c0">
+      <span class="c3">CUNY Medgar Evers College, </span
+      ><span class="c3">Dean&rsquo;s List</span
+      ><span class="c2"
         >&nbsp;(June 2021, December 2020, June 2020, January 2020, June
         2019)</span
       >
     </p>
-    <p class="c4">
-      <span class="c2"
-        >Medgar Evers College, Award of Outstanding Academic Excellence</span
-      ><span class="c0">&nbsp;(May 2020)</span>
+    <p class="c0">
+      <span class="c3"
+        >CUNY Medgar Evers College, Award of Outstanding Academic
+        Excellence</span
+      ><span class="c2">&nbsp;(May 2020)</span>
     </p>
-    <p class="c4">
-      <span class="c2"
-        >Medgar Evers College, First Place Winner of the CS Students Programming
-        Contest</span
-      ><span class="c0">&nbsp;(May 2020)</span>
+    <p class="c0">
+      <span class="c3"
+        >CUNY Medgar Evers College, First Place Winner of the CS Students
+        Programming Contest</span
+      ><span class="c2">&nbsp;(May 2020)</span>
     </p>
-    <p class="c4">
-      <span class="c2">College Board, AP Scholar with Distinction</span
-      ><span class="c0">&nbsp;(July 2018)</span>
+    <p class="c0">
+      <span class="c3">College Board, AP Scholar with Distinction</span
+      ><span class="c2">&nbsp;(July 2018)</span>
     </p>
   </body>
 </html>
