--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<nav>
 		<ul>
 			<li><a href="/">Home</a></li>
-			<li><a href="/about/FungResume.html">About Me</a></li>
+			<li><a href="/about/YauHoFungResume.html">About Me</a></li>
 			<li><a href="/first-html/PythonErrors.html">My First HTML Page</a></li>
 		</ul>
 	</nav>
